# LogGuard

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DEPLOYMENT.md  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  deploy_render.yml
config/: config.example.yaml  config.sample.env  config.yaml
docker/: Dockerfile  docker-compose.yml
scripts/: generate_mock_logs.py  get_render_service_ids.py  render_start.sh  run_stress_test.py  setup.sh
src/: __init__.py  alerter.py  analyzer.py  config.py  database.py  main.py  monitor.py  parser.py  tools_repro.py
src/cli/: __init__.py  commands.py  dashboard.py
src/web/: __init__.py  app.py
src/web/static/: style.css
src/web/templates/: index.html
tests/: test_analyzer.py  test_database.py  test_monitor.py  test_parser.py
tools/: inspect_db.py  repro_db.py
