[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logguard"
version = "1.0.0"
description = "A production-ready Linux Log Monitoring & Analysis Tool using Python and SQLite."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Developer" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    "rich>=13.7.1",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "jinja2>=3.1.3",
    "plyer>=2.1.0"
]

[project.scripts]
logguard = "src.cli.commands:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
